# MumbaiLocalDelay

./: .env.example  .gitignore  DESIGN.md  Procfile  README.md  TODOS.md  pyproject.toml  railway.json  render.yaml  ruff.toml  sql_showcase.sql
.claude/: settings.local.json
.github/workflows/: ci.yml  refresh_data.yml
analysis/: __init__.py  anomaly.py  correlation.py  delays.py  forecasting.py  insights.py  rankings.py  sql_queries.py
api/: deps.py  main.py  schemas.py
api/routers/: analysis.py  ask.py  delays.py  export.py  meta.py
dashboard/: __init__.py  app.py  charts.py  map.py
data/raw/: real_baselines.parquet  stops.parquet
data/sample/: stops_sample.parquet
data/sample/gtfs/: routes.txt  stop_times.txt  stops.txt
docs/superpowers/plans/: 2026-05-20-mumbai-local-10-10.md  2026-05-20-prediction-correlation-eda.md  phase-1-scaffold.md  phase-2-gtfs-ingestion.md  phase-3-delay-engine.md  (+4 more)
excel/: RefreshData.bas
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
notebooks/: eda_mumbai_delays.ipynb
pipeline/: __init__.py  store.py
pipeline/ingest/: __init__.py  gtfs.py  real_data.py  scheduler.py  scraper.py  simulator.py  stations.py
pipeline/transform/: __init__.py  clean.py  features.py
scripts/: seed_db.py
tests/: conftest.py  test_anomaly.py  test_api.py  test_charts.py  test_clean.py  test_correlation.py  test_forecasting.py  test_gtfs.py  test_rankings.py  test_real_data.py  test_scaffold.py  test_simulator.py  test_sql_queries.py  test_stations.py  test_store.py
(+20 files in other folders)
