[project]
name = "mumbai-local-delays"
version = "0.1.0"
description = "Mumbai local train delay visualizer — end-to-end DA/DE portfolio project"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "plotly>=5.20.0",
    "dash>=2.17.0",
    "folium>=0.16.0",
    "prophet>=1.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pyyaml>=6.0.0",
    "pytest-timeout>=2.4.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "analysis", "dashboard", "api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
